...
        app:layout_constraintEnd_toEndOf="@+id/lOuter"
        app:layout_constraintStart_toStartOf="@+id/lOuter"
        app:layout_constraintTop_toBottomOf="@+id/lOuter"
        app:srcCompat="@drawable/down" />

    <Button
        android:id="@+id/led"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/next_sequence"
...
