...
            android:text="@string/development_mode"
            app:layout_constraintBottom_toBottomOf="@+id/clDevMode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/clDevMode" />

        <Switch
            android:id="@+id/developmentMode"
            android:layout_width="72dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
